# lovelace-expander-card

./: .gitignore  Makefile  README.md  eslint.config.mjs  hacs.json  package-lock.json  package.json  pnpm-lock.yaml  pyproject.toml
.github/: copilot-instructions.md  dependabot.yml
.github/workflows/: autoClose.yml  build.yml  docs.yml  label.yml  release-workflow.yml  validate.yml
docs/: mkdocs.yml
docs/scenarios/: .gitkeep
docs/source/: index.md  quick-start.md
docs/source/chapter/configuration/: configuration-overview.md  examples.md  gui-configuration.md  index.md
docs/source/chapter/contribution/: contribution.md
docs/source/chapter/faq/: faq.md
docs/source/chapter/style/: card-mod.md  hover.md  index.md  style.md  styling-examples.md
docs/source/chapter/templating/: action.md  index.md  template.md
src/: Card.svelte  ExpanderCard.svelte  ExpanderCardEditor.ts  configtype.ts  editortype.ts  index.ts  types.ts
src/helpers/: ha-dialog-styles.ts  raw-config.ts  style-converter.ts  templates.ts
src/title-card/: titleCardEditForm.ts
tests/: conftest.py  doc-image-audit-exclusions.txt  plugins.yaml  test_doc_audit.py
tests/ha-config/: configuration.yaml  customize.yaml
tests/ha-config/www/: .gitkeep
tests/visual/: conftest.py  test_doc_images.py  test_scenarios.py
tests/visual/scenarios/expander/: expander_01_collapsed.yaml  expander_02_expanded.yaml  expander_03_expand_click.yaml  expander_04_clear_background.yaml  expander_05_title_card.yaml  expander_06_nested.yaml  expander_07_nested_masonry.yaml  (+1 more)
tests/visual/snapshots/: .gitkeep
(+3 files in other folders)
