[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "lovelace-expander-card"
version = "0.0.1"
requires-python = ">=3.11"

[project.optional-dependencies]
test = [
    "ha-testcontainer[test]>=2.1",
    "pytest>=7.0",
    "PyYAML>=6.0",
    "playwright>=1.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"
